@@ -14,6 +14,7 @@ lib/totem-scrsaver.c
 src/eggdesktopfile.c
 src/eggfileformatchooser.c
 src/eggsmclient.c
+src/totem-audio-preview.c
 src/totem-cell-renderer-video.c
 src/totem-dnd-menu.c
 src/totem-fullscreen.c
