@@ -1,3 +1,7 @@
+2009-07-19  Bastien Nocera  <hadess@hadess.net>
+
+	* POTFILES.in: Add audio preview to the list
+
 2009-05-06  Bastien Nocera  <hadess@hadess.net>
 
 	* po/POTFILES.in: Update filelist
