@@ -1,5 +1,10 @@
 2009-07-19  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-audio-preview.c (main): Add PA properties
+	to the binary (Closes: #573912)
+
+2009-07-19  Bastien Nocera  <hadess@hadess.net>
+
 	* Makefile.am: Build the code first, and the docs last
 
 2009-07-19  Philip Withnall  <philip@tecnocode.co.uk>
